@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.org.llm</groupId>
         <artifactId>super-pom</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.2</version>
         <relativePath>../super-pom/pom.xml</relativePath>
     </parent>
 
@@ -26,10 +26,7 @@
         <java.version>25</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
-        <shedlock.version>7.7.0</shedlock.version>
 
-        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
     </properties>
 
     <build>
@@ -38,7 +35,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
                     <configuration>
                         <release>${java.version}</release>
                         <annotationProcessorPaths>
@@ -56,9 +52,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                             <include>**/*Tests.java</include>
@@ -71,14 +65,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
-                        <environmentVariables>
-                            <DOCKER_HOST>unix://${user.home}/.docker/run/docker.sock</DOCKER_HOST>
-                            <TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE>${user.home}/.docker/run/docker.sock</TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE>
-                            <DOCKER_API_VERSION>1.41</DOCKER_API_VERSION>
-                        </environmentVariables>
                         <includes>
                             <include>**/*IT.java</include>
                         </includes>
